@@ -17,8 +17,6 @@
 package io.warp10.script.functions;
 
 import com.geoxp.GeoXPLib.GeoXPShape;
-import com.google.common.base.Charsets;
-
 import io.warp10.WarpURLEncoder;
 import io.warp10.continuum.gts.GTSEncoder;
 import io.warp10.continuum.gts.GeoTimeSerie;
@@ -34,6 +32,7 @@ import io.warp10.script.WarpScriptStack.Mark;
 import io.warp10.script.WarpScriptStackFunction;
 
 import java.io.UnsupportedEncodingException;
+import java.nio.charset.StandardCharsets;
 import java.security.interfaces.RSAPrivateKey;
 import java.security.interfaces.RSAPublicKey;
 import java.util.BitSet;
@@ -239,7 +238,7 @@ public class SNAPSHOT extends NamedWarpScriptFunction implements WarpScriptStack
           appendProcessedString(sb, o.toString());
         } else {
           try {
-            sb.append(WarpURLEncoder.encode(o.toString(), "UTF-8"));
+            sb.append(WarpURLEncoder.encode(o.toString(), StandardCharsets.UTF_8));
           } catch (UnsupportedEncodingException uee) {
             throw new WarpScriptException(uee);
           }
@@ -358,7 +357,7 @@ public class SNAPSHOT extends NamedWarpScriptFunction implements WarpScriptStack
         }
       } else if (o instanceof BitSet) {
         sb.append("'");
-        sb.append(new String(OrderPreservingBase64.encode(((BitSet) o).toByteArray()), Charsets.UTF_8));
+        sb.append(new String(OrderPreservingBase64.encode(((BitSet) o).toByteArray()), StandardCharsets.UTF_8));
         sb.append("' ");
         sb.append(WarpScriptLib.OPB64TO);
         sb.append(" ");
@@ -366,7 +365,7 @@ public class SNAPSHOT extends NamedWarpScriptFunction implements WarpScriptStack
         sb.append(" ");
       } else if (o instanceof byte[]) {
         sb.append("'");
-        sb.append(new String(OrderPreservingBase64.encode((byte[]) o), Charsets.UTF_8));
+        sb.append(new String(OrderPreservingBase64.encode((byte[]) o), StandardCharsets.UTF_8));
         sb.append("' ");
         sb.append(WarpScriptLib.OPB64TO);
         sb.append(" ");
@@ -410,7 +409,7 @@ public class SNAPSHOT extends NamedWarpScriptFunction implements WarpScriptStack
         // Nevertheless we need to have the correct levels of the stack preserved, so
         // we push an informative string onto the stack there
         try {
-          sb.append("'UNSUPPORTED:" + WarpURLEncoder.encode(o.getClass().toString(), "UTF-8") + "' ");
+          sb.append("'UNSUPPORTED:" + WarpURLEncoder.encode(o.getClass().toString(), StandardCharsets.UTF_8) + "' ");
         } catch (UnsupportedEncodingException uee) {
           throw new WarpScriptException(uee);
         }
